Closed
Bug 369002
Opened 19 years ago
Closed 15 years ago
config.trim_on_minimize does nothing on Vista/Win7
Categories
(Core :: Widget: Win32, defect)
Tracking
()
RESOLVED
FIXED
People
(Reporter: cbook, Assigned: jimm)
References
(Blocks 1 open bug)
Details
Attachments
(2 files)
|
2.47 KB,
patch
|
robarnold
:
review+
|
Details | Diff | Splinter Review |
|
2.03 KB,
patch
|
Details | Diff | Splinter Review |
Setting Config.trim_on_minimize (http://kb.mozillazine.org/Config.trim_on_minimize) to true saves a lot of RAM in Windows 2000 - XP. On Vista this pref seems to be broken because in my case it saves only 2kb.
STR:
Use XP, W2k, W2k3
-Create in about:config Config.trim_on_minimize and set this pref to true
-Restart firefox
-Open the Taskmanger
-Minimize Firefox and Memory usage goes down
Do the same steps on Vista and you see no effect on minimize
Comment 1•19 years ago
|
||
This doesn't work for me under Windows XP. I used Mozilla/5.0 (Windows; U; Windows NT 5.1; en-US; rv:1.8.1.1) Gecko/2006120418 Firefox/2.0.0.1 to test it.
Comment 2•18 years ago
|
||
(In reply to comment #0)
> -Minimize Firefox and Memory usage goes down
> Do the same steps on Vista and you see no effect on minimize
To Carsten Book(bug opener):
Are you talking about number displayed in "Memory Usage" column for "Image Name=firefox.exe" row at "Process" tab of MS Win's "Task Manager"?
Comment 3•18 years ago
|
||
I'm pretty sure the reporter is talking about "Memory Usage", or "Working Set" as it is better-labeled in Vista's Task Manager.
It's also a misnomer that this is saving any memory at all. The default behaviour (false) actually overrides the normal behaviour of the OS, to its detriment, but when set to true the OS will manage Firefox's memory the same as any other app. It is therefore normal and expected to be different on different versions of the OS, even on different machines, and I really don't think you can call this a bug.
(In reply to comment #1)
> This doesn't work for me under Windows XP. I used Mozilla/5.0 (Windows; U;
> Windows NT 5.1; en-US; rv:1.8.1.1) Gecko/2006120418 Firefox/2.0.0.1 to test it.
>
The "config.trim_on_minimize" setting should work under Windows XP. However, it should NOT be called "Config.trim_on_minimize" but instead called "config.trim_on_minimize". BE CAREFUL! The "c" for config should be lowercase, NOT uppercase for it to work under Win2k/XP/2k3.
(In reply to comment #0)
> Setting Config.trim_on_minimize
> (http://kb.mozillazine.org/Config.trim_on_minimize) to true saves a lot of RAM
> in Windows 2000 - XP. On Vista this pref seems to be broken because in my case
> it saves only 2kb.
>
> STR:
> Use XP, W2k, W2k3
> -Create in about:config Config.trim_on_minimize and set this pref to true
> -Restart firefox
> -Open the Taskmanger
> -Minimize Firefox and Memory usage goes down
>
> Do the same steps on Vista and you see no effect on minimize
>
Hey Carsten. I have tested "config.trim_on_minimize" under a Vista Home Basic laptop computer recently and you're right. Minimizing FF in Vista with "config.trim_on_minimize" set to "true" does nothing to reduce memory usage.
Comment 6•18 years ago
|
||
(In reply to comment #0)
> -Minimize Firefox and Memory usage goes down
> Do the same steps on Vista and you see no effect on minimize
Misleading label of "Memory Usage" looks to be improved to "Working Set" by Vista. (similar label to name in Performance Counter)
To Carsten Book(bug opener):
Read following document pointed by Bug 381950 Comment #0 for "page trimming" of MS Win(NT or later), please.
> "Windows NT page replacement policies"
> http://www.demandtech.com/Resources/Papers/WinMemMgmt.pdf
Some Web pages say "such actions on Vista are executed each 5 minutes in background". Will "10 or 20 minutes of minimize of Fx/Tb/Sm window" invoke "page triming" action by Vista? Will number displayed in "Working Set" column become smaller(than before minimize) after 10 or 20 minutes?
Updated•18 years ago
|
Summary: Config.trim_on_minimize does nothing on Vista → config.trim_on_minimize does nothing on Vista
Updated•16 years ago
|
Assignee: win32 → nobody
QA Contact: ian → win32
| Comment hidden (abuse-reviewed) |
| Assignee | ||
Comment 9•15 years ago
|
||
FYI, I'm planning on disabling this by default for Vista and up (or maybe in all cases after some testing) in 7.0. This "feature" has been the source of numerous bugs over the years, and was originally designed to address something on 2K. I think it's time we finally turn it off in cases where it has little to no effect.
| Assignee | ||
Updated•15 years ago
|
Summary: config.trim_on_minimize does nothing on Vista → config.trim_on_minimize does nothing on Vista/Win7
| Assignee | ||
Comment 10•15 years ago
|
||
I've been doing a little testing on memory starved images. So far I've found that the setting does as advertised on XP - w/'TOM' disabled (default fx setting), the working set remains constant and there are few page faults when restoring the window. With the option enabled (default win behavior) I see the working set drop way down on minimization, and I also see some lagginess after restoring and scrolling a large page. When scrolling I also see the working set expand and the page faults spike.
On Win7 though, I see none of this. The behavior is the same regardless of the setting. The working set on an image w/450mb of ram and 430 in use didn't page out anything when the app was minimized. Because of this when restoring the window, page faults were at a minimum and there was no lagginess.
So based on this, I think it would be safe to flip the setting to true by default on Vista and up.
| Assignee | ||
Comment 11•15 years ago
|
||
Attachment #535472 -
Flags: review?
| Assignee | ||
Updated•15 years ago
|
Attachment #535472 -
Flags: review? → review?(tellrob)
Comment 12•15 years ago
|
||
Comment on attachment 535472 [details] [diff] [review]
change
I'd rather just get rid of the whole trim on minimize feature, but this is at least some progress towards that. Don't suppose we could just ignore the pref for Vista/7?
Attachment #535472 -
Flags: review?(tellrob) → review+
| Assignee | ||
Comment 13•15 years ago
|
||
(In reply to comment #12)
> Comment on attachment 535472 [details] [diff] [review] [review]
> change
>
> I'd rather just get rid of the whole trim on minimize feature, but this is
> at least some progress towards that. Don't suppose we could just ignore the
> pref for Vista/7?
There's no harm in keeping it around for a while. User's who have set this manually would likely have set it to true so I don't see a need to ignore it. After we get past XP (which according to wikipedia still enjoys around 40% market share) we can remove the code completely.
| Assignee | ||
Comment 14•15 years ago
|
||
The util prefs work broke this, here's the updated patch w/some additional cleanup on the comments.
Assignee: nobody → jmathies
| Assignee | ||
Comment 15•15 years ago
|
||
Status: NEW → RESOLVED
Closed: 15 years ago
Resolution: --- → FIXED
Comment 17•7 years ago
|
||
For future readers: 'config.trim_on_minimize' has no effect. Removed as per https://bugzilla.mozilla.org/show_bug.cgi?id=1325503.
You need to log in
before you can comment on or make changes to this bug.
Description
•