Bug 369002 - Set os working set trimming behavior for minimized windows as the default on Vista and up. r=robarnold